--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
 body {
   padding: 24px;
 }
+
+.loading {
+  width: 100px;
+  height: 100px;
+  /* display: none; */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation-name: loading;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes loading {
+  0% {transform: rotate(0deg)}
+  100% {transform: rotate(360deg)}
+}
