--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ li:hover {
   cursor: pointer;
 }
 
+.countries-list {
+  display: none;
+}
+
 @keyframes loading {
   0% {transform: rotate(0deg)}
   100% {transform: rotate(360deg)}
