--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
   padding: 24px;
+  font-family: Manrope;
 }
 
 .loading {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   /* display: none; */
   position: fixed;
   top: 50%;
