--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,89 @@
+:root {
+  /* --background-color: #0B192E; */
+  --background-color: #0B192D;
+  --background-light: #12233F;
+  /* --background-color: #020202; */
+  --font-light: #CDD7F5;
+  --font-dark: #8993AF;
+  --font-accent: #3366cc;
+  --font-accent-50: #6CE4FE80;
+  --font-accent-50: #6CE4FE4D;
+
+  --white: #ffffff;
+  --black: #000000;
+
+  --manrope: 'Manrope';
+  --ibm: 'IBM Plex Mono';
+  --border-radius: 10px;
+  --duration: .3s;
+
+  --gap: 8px;
+  --gap0-5: calc(var(--gap)*0.5);
+  --gap1-5: calc(var(--gap)*1.5);
+  --gap2: calc(var(--gap)*2);
+  --gap3: calc(var(--gap)*3);
+  --gap4: calc(var(--gap)*4);
+  --gap5: calc(var(--gap)*5);
+  --gap6: calc(var(--gap)*6);
+  --gap7: calc(var(--gap)*7);
+  --gap8: calc(var(--gap)*8);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
-  padding: 24px;
+  padding: var(--gap3);
   font-family: Manrope;
 }
 
+h1 {
+  font-size: 3.2rem;
+  margin-bottom: var(--gap4);
+}
+
+.label {
+  font-size: 1.6rem;
+}
+
+.dashboard {
+  background-color: var(--font-light);
+  padding: var(--gap2);
+  border-radius: var(--border-radius);
+}
+
+.display-data,
+.controls {
+  display: flex;
+  justify-content: space-around;
+}
+
+p {
+  font-size: 2.4rem;
+  font-weight: bold;
+  margin-top: var(--gap);
+}
+
+.controls {
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.6rem;
+}
+
+button {
+  width: 10rem;
+  /* height: 48px; */
+  margin: var(--gap2);
+}
+
 .loading {
-  width: 70px;
-  height: 70px;
+  width: 7rem;
+  height: 7rem;
   /* display: none; */
   position: fixed;
   top: 50%;
@@ -20,31 +98,47 @@ body {
 ul {
   position: absolute;
   z-index: 100;
-  background-color: white;
+  background-color: var(--white);
   list-style: none;
-  max-height: 200px;
-  width: 200px;
+  max-height: 20rem;
+  width: 20rem;
   margin-top: 0;
-  padding: 0 24px 8px;
+  padding: 0 var(--gap3) var(--gap);
   overflow-y: scroll;
-  border: 1px solid black;
+  border: 1px solid var(--black);
   border-top: none;
 }
 
 li {
   /* display: inline; */
-  margin-right: 10px;
+  margin-right: 1rem;
 }
 
 li:hover {
   cursor: pointer;
-  color: white;
-  background-color: black;
+  color: var(--white);
+  background-color: var(--black);
 }
 
 .countries-list {
   display: none;
 }
+
+.charts {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* .chart {
+  width: 100%;
+  height: 50rem;
+} */
+
+footer p {
+  font-size: 1.2rem;
+}
+
 
 @keyframes loading {
   0% {transform: rotate(0deg)}
